--- a/Index.html
+++ b/Index.html
@@ -5,9 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Testing tags</title>
 </head>
 <body>
-    
+    <h1>Testing tags</h1>
+    <p>This is a <strong>important </strong>paragraph </p>
+    <p>This is another <em>amphasized</em> paragraph</p>
+    <p>
+        This is one line <br>
+        This is a second line <br>
+        This is third line
+    </p>
+    <pre>
+        if age>=18;
+            print("The person is adult")
+    </pre>
+    <blockquote>
+        To be or not to be. That's the question
+    </blockquote>
 </body>
 </html>
